[package]
name = "rtt2"
version = "0.1.0"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
edition = "2018"

[dependencies]
vcell = "0.1.2"

# Dependencies for examples
cortex-m = { version = "0.6.2", optional = true }
cortex-m-rt = { version = "0.6.12", optional = true }
panic-halt = { version = "0.2.0", optional = true }

[features]
examples-cortex-m = ["cortex-m", "cortex-m-rt", "panic-halt"]

[[example]]
name = "cortex-m"
required-features = ["examples-cortex-m"]
