[workspace]
members = ["examples-cortex-m", "rtt-target", "panic-rtt-target", "panic-test"]

[patch.crates-io]
rtt-target = { path = "./rtt-target" }
panic-rtt-target = { path = "./panic-rtt-target" }

# This is for the examples/tests
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
