[package]
name = "examples-cortex-m"
version = "0.1.0"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
rtt-target = { path = "../rtt-target" }
ufmt = "0.1.0"

[[bin]]
name = "custom"

[[bin]]
name = "print"

[[bin]]
name = "ufmt"