[package]
name = "panic-rtt-target"
description = "Logs panic messages over RTT using rtt-target"
version = "0.2.0"
edition = "2021"
readme = "README.md"
keywords = ["no-std", "embedded", "debugging", "rtt"]
license = "MIT"
authors = [
    "Matti Virkkunen <mvirkkunen@gmail.com>",
    "Per Lindgren <per.lindgren@ltu.se>",
]
repository = "https://github.com/probe-rs/rtt-target"

[dependencies]
rtt-target = {version = "0.6.0", path = "../rtt-target" }
critical-section = "1.1.1"
portable-atomic = { version = "1.6.0", default-features = false }

defmt = { version = "0.3.0", optional = true }

[features]
default = []
defmt = ["dep:defmt"]

[package.metadata.docs.rs]
features = ["defmt"]
