[package]
name = "rtt-target"
description = "Target side implementation of the RTT (Real-Time Transfer) I/O protocol"
version = "0.3.1"
edition = "2018"
readme = "../README.md"
keywords = ["no-std", "embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/mvirkkunen/rtt-target"

[dependencies]
ufmt-write = "0.1.0"
critical-section = "1.0.0"

