[package]
name = "rtt-target"
description = "Target side implementation of the RTT (Real-Time Transfer) I/O protocol"
version = "0.6.0"
edition = "2018"
readme = "../README.md"
keywords = ["no-std", "embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/probe-rs/rtt-target"

[features]
default = []

[dependencies]
ufmt-write = "0.1.0"
critical-section = "1.0.0"
portable-atomic = { version = "1.6.0", default-features = false }

defmt = { version = "0.3.0", optional = true }
