[package]
name = "rtt-target"
description = "Target side implementation of the RTT (Real-Time Transfer) I/O protocol"
version = "0.6.1"
edition = "2018"
readme = "../README.md"
keywords = ["no-std", "embedded", "debugging", "rtt"]
license = "MIT"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>"]
repository = "https://github.com/probe-rs/rtt-target"

[features]
default = []
log = ["dep:log", "dep:once_cell"]
log_racy_init = [] # use log::set_logger_racy instead of log::set_logger

[dependencies]
ufmt-write = "0.1.0"
critical-section = "1.0.0"
portable-atomic = { version = "1.6.0", default-features = false }

defmt = { version = "0.3.0", optional = true }
log = {version = "0.4.22", optional = true}
once_cell = { version = "1.20.2" , features = ["critical-section"], default-features = false, optional = true}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
